--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ Background: #A5B1B8
 letters: #2F3435
 
 Modificate in pomodoro.js
-Session: #5BBFB9;
+Session: #5BBFB9
 Break: #D9298A
 */
 
@@ -32,10 +32,11 @@ p { display: inline; }
 
 #settings div { display: inline; }
 
-/* border-bottom color will be modified in pomodoro.js */
+/* border-bottom-color will be modified in pomodoro.js */
 #timer
 {
-    border-bottom: medium solid #5BBFB9;
+    border-bottom: medium solid black;
+    border-bottom-color: #5BBFB9;
     font-size: 3em;
     margin-bottom: .2em;
 }
